fix(lineage): no lineage information message wasn't readable

--- a/src/file/Lineage.css
+++ b/src/file/Lineage.css
@@ -32,3 +32,11 @@ g.workflow polygon {
 .graphContainer{
   text-align: center;
 }
+
+g.nolineage text{
+  font-size: 16px;
+}
+
+g.nolineage rect{  
+  fill: #fff;
+}
